--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Yi-Ting Chen</a></h1>
-				<span class="position"><a href="#">MSCV student @ CMU</span>
+				<span class="position"><a href="#">Ph.D. student @ UMD</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -99,7 +99,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! I'm Yi-Ting</h1>
-						   					<h2>I'm currently a second year PhD student in Computer Science at University of Maryland advised by Prof. Jia-Bin Huang. I am fortunate to be advised by Prof. <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan</a>, Dr.<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, and Dr. <a href="http://www.cs.cmu.edu/~shuk/"> Shu Kong</a>.</h2>
+						   					<h2>I'm currently a second year PhD student in Computer Science at University of Maryland, advised by Prof. <a href=https://jbhuang0604.github.io/> Jia-Bin Huang. Previously, I am fortunate to be advised by Prof. <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan</a>, Dr.<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, Prof. <a href="https://aimerykong.github.io/"> Shu Kong</a>.</h2>
 						   					<h2>My research interests lie in Computer Vision and Machine Learning, focusing on visual recognition mainly. </h2>
 												<a >
 												<p><a class="btn btn-primary btn-learn" href="docs/CV_Yi_Ting_Chen.pdf">Download CV <i class="icon-download4"></i></a></p>
