--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p>Email: yitingc@andrew.cmu.edu<br></p>
+				<p>Email: ytchen@umd.edu<br></p>
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span> <span>Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash.com</a></span></small></p>
@@ -128,6 +128,26 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+				         	<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               	<div class="timeline-image">
+            						<img class="img-circle img-responsive" src="images/cmu_60.jpeg" alt="">
+         	 						</div>
+
+					               <div class="timeline-label">
+					                  <h2>
+					                  	Ph.D in University of Maryland<br>
+					                  	<span>
+					                  		Aug 2021 - Now<br>
+					                  		Ph.D. in Computer Science<br>
+					                  		Advised by Prof. <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>.
+					                  	</span>
+					                  </h2>
+					                  
+					               </div>
+					            </div>
+					         </article>
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
@@ -141,8 +161,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  	<span>
 					                  		Sep 2019 - Dec 2020<br>
 					                  		Master in Computer Vision (MSCV), Robotics Institute, School of Computer Science<br>
-					                  		Advised by Prof. <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, 
-					                  		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>
+					                  		Advised by Prof. <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, Dr.
+					                  		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://aimerykong.github.io/"> Shu Kong</a>.
 					                  	</span>
 					                  </h2>
 					                  
