--- a/index.html
+++ b/index.html
@@ -244,6 +244,28 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-1">
 					               </div>
 					               <div class="timeline-label">
+					                  <h2>Multimodal Object Detection via Probabilistic Ensembling</h2>
+											<div class="container">
+											  <div class="row">
+					                  			<div class="col-md-5">
+					                  				<p><a href="https://jamie725.github.io/website/" target="blank">Yi-Ting Chen*</a></b>, 
+            										Jinghao Shi*, Zelin Ye*, <a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan</a> and <a href="https://aimerykong.github.io/"> Shu Kong</a>.</p>
+            										<div class="paper-conf">IEEE Conference on European Conference on Computer Vision<b>(ECCV)</b>, 2022</div>
+					                  				<p>[<a href="https://arxiv.org/pdf/2104.02904.pdf" target="_blank">Paper</a>] [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">Project</a>] [<a href="https://github.com/Jamie725/RGBT-detection" target="_blank">Code</a>]</p>
+					                  			</div>
+					                  			<div class="col-md-4">
+													<img width="50%" src="images/FSA.png" alt="Italian Trulli">
+									  			</div>
+									  		</div>
+									  	</div>									  	
+					               </div>
+					            </div>
+					         </article>
+					         <article class="timeline-entry begin">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-1">
+					               </div>
+					               <div class="timeline-label">
 					                  <h2>FSA-Net: Learning Fine-Grained Structure Aggregation for Head Pose Estimation from a Single Image</h2>
 											<div class="container">
 											  <div class="row">
@@ -259,8 +281,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 													<img width="50%" src="images/FSA.png" alt="Italian Trulli">
 									  			</div>
 									  		</div>
-									  	</div>
-									  	
+									  	</div>									  	
 					               </div>
 					            </div>
 					         </article>
