--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					            <div class="timeline-entry-inner">
 
 					               	<div class="timeline-image">
-            						<img class="img-circle img-responsive" src="images/umd_logo.jpeg" alt="">
+            						<img class="img-circle img-responsive" src="images/umd_60.jpeg" alt="">
          	 						</div>
 
 					               <div class="timeline-label">
@@ -249,7 +249,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											  <div class="row">
 					                  			<div class="col-md-5">
 					                  				<p><a href="https://jamie725.github.io/website/" target="blank">Yi-Ting Chen*</a></b>, 
-            										Jinghao Shi*, Zelin Ye*, <a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan</a> and <a href="https://aimerykong.github.io/"> Shu Kong</a>.</p>
+            										Jinghao Shi*, Zelin Ye*, <a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan#</a> and <a href="https://aimerykong.github.io/"> Shu Kong#</a>.</p>
             										<div class="paper-conf">IEEE European Conference on Computer Vision<b> (ECCV)</b>, 2022</div>
 					                  				<p>[<a href="https://arxiv.org/pdf/2104.02904.pdf" target="_blank">Paper</a>] [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">Project</a>] [<a href="https://github.com/Jamie725/RGBT-detection" target="_blank">Code</a>]</p>
 					                  			</div>
