--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				         <div class="timeline-centered">
 					         <article class="timeline-entry begin">
 					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-1">
+					               <div class="timeline-icon color-4">
 					               </div>
 					               <div class="timeline-label">
 					                  <h2>Multimodal Object Detection via Probabilistic Ensembling</h2>
@@ -251,7 +251,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  				<p><a href="https://jamie725.github.io/website/" target="blank">Yi-Ting Chen*</a></b>, 
             										Jinghao Shi*, Zelin Ye*, <a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan#</a> and <a href="https://aimerykong.github.io/"> Shu Kong#</a>.</p>
             										<div class="paper-conf">IEEE European Conference on Computer Vision<b> (ECCV)</b>, 2022</div>
-					                  				<p>[<a href="https://arxiv.org/pdf/2104.02904.pdf" target="_blank">Paper</a>] [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">Project</a>] [<a href="https://github.com/Jamie725/RGBT-detection" target="_blank">Code</a>]</p>
+					                  				<p>[<a href="https://arxiv.org/pdf/2104.02904.pdf" target="_blank">Paper</a>] [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">Project</a>] [<a href="https://github.com/Jamie725/RGBT-detection" target="_blank">Code</a>][<a href="https://youtu.be/Oz881WtKR7o"> Video</a>]</p>
 					                  			</div>
 					                  			<div class="col-md-4">
 													<img width="50%" src="images/FSA.png" alt="Italian Trulli">
@@ -271,7 +271,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											  <div class="row">
 					                  			<div class="col-md-5">
 					                  				<p><a href="https://github.com/shamangary" target="blank">Tsun-Yi Yang</a>, 
-            										<b><a href="http://www.andrew.cmu.edu/user/yitingc/" target="blank">Yi-Ting Chen</a></b>, 
+            										<b><a href="https://jamie725.github.io/website/" target="blank">Yi-Ting Chen</a></b>, 
             										<a href="https://sites.google.com/site/yylinweb/" target="blank">Yen-Yu Lin</a>, and
             										<a href="https://www.csie.ntu.edu.tw/~cyy/" target="blank">Yung-Yu Chuang</a>.</p>
             										<div class="paper-conf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2019</div>
