--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  				<p>[<a href="https://arxiv.org/pdf/2104.02904.pdf" target="_blank">Paper</a>] [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">Project</a>] [<a href="https://github.com/Jamie725/RGBT-detection" target="_blank">Code</a>][<a href="https://youtu.be/Oz881WtKR7o"> Video</a>]</p>
 					                  			</div>
 					                  			<div class="col-md-4">
-													<img width="50%" src="images/FSA.png" alt="Italian Trulli">
+													<img width="50%" src="images/RGBT_det.png" alt="Italian Trulli">
 									  			</div>
 									  		</div>
 									  	</div>									  	
