--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 							<div class="fancy-collapse-panel">
 								<div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
-   									<div class="panel panel-default">
+									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne2" aria-expanded="false" aria-controls="collapseOne2">Carnegie Mellon University - Teaching Assistant / Aug 2020 - Dec 2020
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne2" aria-expanded="false" aria-controls="collapseOne2">Meta - Research Scientist Intern / May 2022 - Aug 2022
 									            </a>
 									        </h4>
 									    </div>
@@ -365,7 +365,24 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-12">								   
-														<p>I was a teaching assistant of course <b>16833 Robot Localization and Mapping</b>, taught by Prof. <a href="https://www.cs.cmu.edu/~kaess/"  target="_blank">Michael Kaess</a>.</p>										
+														<p>Neural radiance fields related topics.</p>										
+										      		</div>									      	
+										      	</div>							      	
+									         </div>
+									    </div>								    
+									</div>
+   									<div class="panel panel-default">
+									    <div class="panel-heading" role="tab" id="headingOne">
+									        <h4 class="panel-title">
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne2" aria-expanded="false" aria-controls="collapseOne2">Argo AI - Software Engineer Intern / May 2021 - Aug 2021
+									            </a>
+									        </h4>
+									    </div>
+									    <div id="collapseOne2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+									         <div class="panel-body">
+									            <div class="row">
+										      		<div class="col-md-12">								   
+														<p>Conducted research on multimodal late fusion for object detection.</p>										
 										      		</div>									      	
 										      	</div>							      	
 									         </div>
