--- a/index.html
+++ b/index.html
@@ -364,8 +364,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    <div id="collapseOne2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
 									            <div class="row">
-										      		<div class="col-md-12">								   
-														<p>Neural radiance fields related topics.</p>										
+										      		<div class="col-md-12">		
+										      			<ul>						   
+															<li>Neural radiance fields related topics.</li>
+														</ul>									
 										      		</div>									      	
 										      	</div>							      	
 									         </div>
@@ -382,7 +384,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-12">								   
-														<p>Conducted research on multimodal late fusion for object detection.</p>										
+														<ul>
+															<li>Conducted research on multimodal late fusion for object detection.</li>	
+														</ul>
 										      		</div>									      	
 										      	</div>							      	
 									         </div>
