--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-4">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>Multimodal Object Detection via Probabilistic Ensembling</h2>
+					                  <h2>Multimodal Object Detection via Probabilistic Ensembling (Oral)</h2>
 											<div class="container">
 											  <div class="row">
 					                  			<div class="col-md-5">
 					                  				<p><a href="https://jamie725.github.io/website/" target="blank">Yi-Ting Chen*</a></b>, 
             										Jinghao Shi*, Zelin Ye*, <a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan#</a> and <a href="https://aimerykong.github.io/"> Shu Kong#</a>.</p>
-            										<div class="paper-conf">IEEE European Conference on Computer Vision<b> (ECCV)</b>, 2022</div>
+            										<div class="paper-conf">IEEE European Conference on Computer Vision<b> (ECCV)</b>, 2022 </div>
 					                  				<p>[<a href="https://arxiv.org/pdf/2104.02904.pdf" target="_blank">Paper</a>] [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">Project</a>] [<a href="https://github.com/Jamie725/RGBT-detection" target="_blank">Code</a>][<a href="https://youtu.be/Oz881WtKR7o"> Video</a>]</p>
 					                  			</div>
 					                  			<div class="col-md-4">
@@ -312,7 +312,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               	<div class="timeline-icon color-3">
 					               	</div>
 					               	<div class="timeline-label">
-					                  	<h2>Fast Video Super-Resolution via Approximate Nearest Neighbor Search</h2>
+					                  	<h2>Fast Video Super-Resolution via Approximate Nearest Neighbor Search (Oral)</h2>
 					                  	<div class="container">
 											<div class="row">
 					                  		<div class="col-md-5">
