--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				   	</li>
 				  	</ul>
 			  	</div>
+			<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=XsLUq2Bu3B1W69BTQ5xACchP8lkZnEf68XICy98JTJ4"></script>
 			</section>
 			<div class="timeline">
+
 
 			<!--==========================================
                    Education
