--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						   					<h2>My research interests lie in Computer Vision and Machine Learning, focusing on visual recognition mainly. </h2>
 												<a >
 												<p><a class="btn btn-primary btn-learn" href="docs/CV_Yi_Ting_Chen.pdf">Download CV <i class="icon-download4"></i></a></p>
+												<a href="https://clustrmaps.com/site/1bqgr"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=XsLUq2Bu3B1W69BTQ5xACchP8lkZnEf68XICy98JTJ4&cl=ffffff" /></a>
 											</div>
 					   				</div>
 					   			</div>
@@ -111,6 +112,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				   	</li>
 				  	</ul>
 			  	</div>			
+
 			</section>
 			<div class="timeline">
 
