--- a/index.html
+++ b/index.html
@@ -532,11 +532,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					            </div>
 					         </article>
-					         
+							<a href="https://clustrmaps.com/site/1bqgr"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=XsLUq2Bu3B1W69BTQ5xACchP8lkZnEf68XICy98JTJ4&cl=ffffff" /></         
 					      </div>
 					   </div>
 				   </div>
-					<a href="https://clustrmaps.com/site/1bqgr"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=XsLUq2Bu3B1W69BTQ5xACchP8lkZnEf68XICy98JTJ4&cl=ffffff" /></a>
+					a>
 				</div>
 				
 			</section>
