--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   					<div class="desc">
 						   					<h1>Hi! I'm Yi-Ting</h1>
 						   					<h2>I'm currently a second year PhD student in Computer Science at University of Maryland, advised by Prof. <a href=https://jbhuang0604.github.io/> Jia-Bin Huang</a>. 
-
+						   					</h2>
+						   					<h2>
 						   						Previously, I am fortunate to be advised by Prof. <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan</a>, Dr.<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, Prof. <a href="https://aimerykong.github.io/"> Shu Kong</a>, Prof. <a href="https://sites.google.com/site/yylinweb/"> Yen-Yu Lin</a> and Prof.<a href="http://media.ee.ntu.edu.tw/member/"> Shao-Yi Chien</a></h2>
-						   					<h2>My research interests lie in Computer Vision and Machine Learning, focusing on visual recognition mainly. </h2>
+						   					<h2>My research interests lie in Computer Vision and Machine Learning, focusing on 3D vision, multimodal models mainly. </h2>
 												<a >
 												<p><a class="btn btn-primary btn-learn" href="docs/CV_Yi_Ting_Chen.pdf">Download CV <i class="icon-download4"></i></a></p>
 											</div>
