--- a/index.html
+++ b/index.html
@@ -246,16 +246,38 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				         <div class="timeline-centered">
 					         <article class="timeline-entry begin">
 					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-5">
+					               </div>
+					               <div class="timeline-label">
+					                  <h2>Shape-aware Text-driven Layered Video Editing</h2>
+											<div class="container">
+											  <div class="row">
+					                  			<div class="col-md-5">
+					                  				<p><a href="https://yaochih.github.io/" target="blank">Yao-Chih Lee</a>, 
+            										Ji-Ze Genevieve Jang, <a href="https://jamie725.github.io/website/" target="blank"><b>Yi-Ting Chen</b>, <a href="https://elizabethqiu.com/cv/">Elizabeth Qiu</a>, <a href="https://jbhuang0604.github.io/" target="_blank">Jia-Bin Huang</a>.</p>
+            										<div class="paper-conf">IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2023</div>
+					                  				<p>[<a href="https://arxiv.org/abs/2301.13173" target="_blank">Paper</a>] [<a href="https://text-video-edit.github.io/">Project</a>]</p>
+					                  			</div>
+					                  			<div class="col-md-4">
+													<img width="50%" src="video/whiteswan.gif" alt="Italian Trulli">
+									  			</div>
+									  		</div>
+									  	</div>									  	
+					               </div>
+					            </div>
+					         </article>
+					         <article class="timeline-entry begin">
+					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-4">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>Multimodal Object Detection via Probabilistic Ensembling (Oral)</h2>
+					                  <h2>Multimodal Object Detection via Probabilistic Ensembling</h2>
 											<div class="container">
 											  <div class="row">
 					                  			<div class="col-md-5">
 					                  				<p><a href="https://jamie725.github.io/website/" target="blank">Yi-Ting Chen*</a></b>, 
             										Jinghao Shi*, Zelin Ye*, <a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan#</a> and <a href="https://aimerykong.github.io/"> Shu Kong#</a>.</p>
-            										<div class="paper-conf">IEEE European Conference on Computer Vision<b> (ECCV)</b>, 2022 </div>
+            										<div class="paper-conf">IEEE European Conference on Computer Vision<b> (ECCV)</b>, 2022, <b> Oral presentation </b> </div>
 					                  				<p>[<a href="https://arxiv.org/pdf/2104.02904.pdf" target="_blank">Paper</a>] [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">Project</a>] [<a href="https://github.com/Jamie725/RGBT-detection" target="_blank">Code</a>][<a href="https://youtu.be/Oz881WtKR7o"> Video</a>]</p>
 					                  			</div>
 					                  			<div class="col-md-4">
@@ -317,14 +339,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               	<div class="timeline-icon color-3">
 					               	</div>
 					               	<div class="timeline-label">
-					                  	<h2>Fast Video Super-Resolution via Approximate Nearest Neighbor Search (Oral)</h2>
+					                  	<h2>Fast Video Super-Resolution via Approximate Nearest Neighbor Searchs</h2>
 					                  	<div class="container">
 											<div class="row">
 					                  		<div class="col-md-5">
 					                  	<p><b><a href="http://www.andrew.cmu.edu/user/yitingc/" target="blank">Yi-Ting Chen</a></b>,
 					                  			<a href="https://sites.google.com/site/wctu1009/" target="blank">Wei-Chih Tu</a>, and
 					                  			<a href="http://media.ee.ntu.edu.tw/member/#nevigator" target="blank">Shao-Yi Chien</a>
-					                  			<div class="paper-conf">IEEE International Conference on Image Processing <b>(ICIP)</b>, 2016</div>
+					                  			<div class="paper-conf">IEEE International Conference on Image Processing <b>(ICIP)</b>, 2016, <b> Oral presentation </b></div>
 					                  	<p>[<a href="https://drive.google.com/file/d/1WCGFTyuID-5PF3xugqT-6HN-hT7WzvFg/view" target="_blank">Paper</a>]</p>
 					                </div>
 					                <div class="col-md-4">
