--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  			<div class="col-md-5">
 					                  				<p><a href="https://jamie725.github.io/website/" target="blank">Yi-Ting Chen*</a></b>, 
             										Jinghao Shi*, Zelin Ye*, <a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://www.cs.cmu.edu/~deva/" target="_blank">Deva Ramanan#</a> and <a href="https://aimerykong.github.io/"> Shu Kong#</a>.</p>
-            										<div class="paper-conf">IEEE European Conference on Computer Vision<b> (ECCV)</b>, 2022, <b> Oral presentation (~3%) </b> </div>
+            										<div class="paper-conf">IEEE European Conference on Computer Vision<b> (ECCV)</b>, 2022, <b> Oral (~3%) </b> </div>
 					                  				<p>[<a href="https://arxiv.org/pdf/2104.02904.pdf" target="_blank">Paper</a>] [<a href="https://mscvprojects.ri.cmu.edu/2020teamc/">Project</a>] [<a href="https://github.com/Jamie725/RGBT-detection" target="_blank">Code</a>][<a href="https://youtu.be/Oz881WtKR7o"> Video</a>]</p>
 					                  			</div>
 					                  			<div class="col-md-4">
@@ -346,7 +346,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  	<p><b><a href="http://www.andrew.cmu.edu/user/yitingc/" target="blank">Yi-Ting Chen</a></b>,
 					                  			<a href="https://sites.google.com/site/wctu1009/" target="blank">Wei-Chih Tu</a>, and
 					                  			<a href="http://media.ee.ntu.edu.tw/member/#nevigator" target="blank">Shao-Yi Chien</a>
-					                  			<div class="paper-conf">IEEE International Conference on Image Processing <b>(ICIP)</b>, 2016, <b> Oral presentation </b></div>
+					                  			<div class="paper-conf">IEEE International Conference on Image Processing <b>(ICIP)</b>, 2016, <b> Oral</b></div>
 					                  	<p>[<a href="https://drive.google.com/file/d/1WCGFTyuID-5PF3xugqT-6HN-hT7WzvFg/view" target="_blank">Paper</a>]</p>
 					                </div>
 					                <div class="col-md-4">
