update umd logo

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					            <div class="timeline-entry-inner">
 
 					               	<div class="timeline-image">
-            						<img class="img-circle img-responsive" src="images/umd_logo.jpeg" alt="">
+            						<img class="img-circle img-responsive" src="images/umd_logo.png" alt="">
          	 						</div>
 
 					               <div class="timeline-label">
