--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 					               <div class="timeline-label">
 					                  <h2>
-					                  	Ph.D. in University of Maryland<br>
+					                  	Ph.D. in University of Maryland, College Park<br>
 					                  	<span>
 					                  		Aug 2021 - Now<br>
 					                  		Ph.D. in Computer Science<br>
