--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  	M.S. in Carnegie Mellon University<br>
 					                  	<span>
 					                  		Sep 2019 - Dec 2020<br>
-					                  		Master in Computer Vision (MSCV), Robotics Institute, School of Computer Science<br>
+					                  		<!-- Master in Computer Vision (MSCV), Robotics Institute, School of Computer Science<br> -->
+					                  		Master in Engineering, School of Computer Science
 					                  		Advised by Prof. <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>, Dr.
 					                  		<a href="https://www.ri.cmu.edu/ri-people/christoph-mertz/">Christoph Mertz</a>, <a href="https://aimerykong.github.io/"> Shu Kong</a>.
 					                  	</span>
