--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					            <div class="timeline-entry-inner">
 
 					               	<div class="timeline-image">
-            						<img class="img-circle img-responsive" src="images/umd_logo.png" alt="">
+            						<img class="img-circle img-responsive" src="images/whu.png" alt="">
          	 						</div>
 
 					               <div class="timeline-label">
@@ -154,7 +154,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-image">
-            						<img class="img-circle img-responsive" src="images/ncku_60.png" alt="">
+            						<img class="img-circle img-responsive" src="images/whu.png" alt="">
          	 						</div>
 					               <div class="timeline-label">
 					                  <h2>
