--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					         </article>
 					         <article class="timeline-entry begin">
 					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-4">
-					               </div>
-					               <div class="timeline-label">
+									<div class="timeline-icon color-4">
+									</div>
+									<div class="timeline-label">
 					                  <h2>An Adaptive Multifeature Sparsity-Based Model for Semiautomatic Road Extraction From High-Resolution Satellite Images in Urban Areas</h2>
 											<div class="container">
 											  <div class="row">
@@ -233,9 +233,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 					         <article class="timeline-entry begin">
 					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-1">
-					               </div>
-					               <div class="timeline-label">
+									<div class="timeline-icon color-1">
+									</div>
+									<div class="timeline-label">
 					                  <h2>Joint image registration and point spread function estimation for the super-resolution of satellite images</h2>
 											<div class="container">
 											  <div class="row">
@@ -245,12 +245,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  			</div>
 									  		</div>
 									  	</div>									  	
-					               </div>
-					            </div>
-					         </article>
-					         <article class="timeline-entry begin">
-					            <div class="timeline-entry-inner">
-					               <div class="timeline-icon color-none">
 					               </div>
 					            </div>
 					         </article>
@@ -300,6 +294,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="fancy-collapse-panel">
 								<div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
 									<div class="panel panel-default">
+										<div class="timeline-image">
+											<img class="img-circle img-responsive" src="images/ali.png" alt="">
+										</div>
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne2" aria-expanded="false" aria-controls="collapseOne2">ALIBABA - SENIOR ALGORITHM EXPERT / APR 2021 - NOW
@@ -323,6 +320,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    </div>								    
 									</div>
    									<div class="panel panel-default">
+										<div class="timeline-image">
+											<img class="img-circle img-responsive" src="images/faceunity.png" alt="">
+										</div>
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne2" aria-expanded="false" aria-controls="collapseOne2">Hangzhou Faceunity Technology -  Senior CV Engineer / FEB 2020 - APR 2021
@@ -344,6 +344,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									    </div>								    
 									</div>
 									<div class="panel panel-default">
+										<div class="timeline-image">
+											<img class="img-circle img-responsive" src="images/Vivo.png" alt="">
+										</div>
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
 									            
@@ -381,7 +384,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<h2 class="colorlib-heading animate-box">Course Project</h2>
+							<h2 class="colorlib-heading animate-box">Engineering Project</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -393,16 +396,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					               <div class="timeline-label">
 					                  <h2>MSCV Capstone Project</h2>
-					                  <h4>Object Detection in Infrared Images </h4>
+					                  <!-- <h4>Object Detection in Infrared Images </h4> -->
 				                  	    <span>
 											<div class="container">
 											  <div class="row">
-											    <div class="col-md-4">
-													In this project, we focus on detection with RGB and infrared signals in the driving scenes.<br>
-													[<a href="https://mscvprojects.ri.cmu.edu/2020teamc/"  target="_blank">Website</a>]<br>
-											    </div>
-											    <div class="col-md-4">
-													<img width="80%" src="images/capstone.jpg" alt="Italian Trulli">
+												<div class="col-md-4">													
+													<video width="360" height="270" controls>
+  														<source src="video/panorama_demo.mp4" type="video/mp4">
+													</video>
 											    </div>
 											  </div>
 											</div>
