--- a/index.html
+++ b/index.html
@@ -395,16 +395,24 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               <div class="timeline-icon color-1">
 					               </div>
 					               <div class="timeline-label">
-					                  <h2>MSCV Capstone Project</h2>
+					                  <h2>Lipsync</h2>
 					                  <!-- <h4>Object Detection in Infrared Images </h4> -->
 				                  	    <span>
 											<div class="container">
 											  <div class="row">
 												<div class="col-md-4">													
 													<video width="360" height="270" controls>
-  														<source src="video/panorama_demo.mp4" type="video/mp4">
+  														<source src="video/obama.mp4" type="video/mp4">
 													</video>
+													<video width="360" height="270" controls>
+														<source src="video/lip.mp4" type="video/mp4">
+												  	</video>
 											    </div>
+												<!-- <div class="col-md-4">													
+													<video width="360" height="270" controls>
+  														<source src="video/lip.mp4" type="video/mp4">
+													</video>
+											    </div> -->
 											  </div>
 											</div>
 					                  	</span>
