--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 															<li>Responsible for projects including multi-image registration, denoising, and de- blurring, completing PC and mobiles side algorithm development work.</li>
 														</ul>
 										      		</div>
-										      		<div class="col-md-6">
+										      		<!-- <div class="col-md-6">
 															<img width="100%" src="images/Amazon.png" alt="Italian Trulli">
-									  				</div>
+									  				</div> -->
 										      	</div>										      	
 									         </div>
 									    </div>
@@ -401,13 +401,20 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											<div class="container">
 											  <div class="row">
 												<div class="col-md-4">													
-													<video width="360" height="270" controls>
+													<video width="250" height="200" controls>
   														<source src="video/obama.mp4" type="video/mp4">
 													</video>
-													<video width="360" height="270" controls>
-														<source src="video/lip.mp4" type="video/mp4">
-												  	</video>
 											    </div>
+												<div class="col-md-4">			
+													<video width="250" height="200" controls>
+														<source src="video/lip.mp4" type="video/mp4">
+													</video>
+												</div> 
+												<div class="col-md-4">			
+													<video width="250" height="200" controls>
+														<source src="video/woman.mp4" type="video/mp4">
+													</video>
+												</div> 
 												<!-- <div class="col-md-4">													
 													<video width="360" height="270" controls>
   														<source src="video/lip.mp4" type="video/mp4">
