--- a/index.html
+++ b/index.html
@@ -400,20 +400,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				                  	    <span>
 											<div class="container">
 											  <div class="row">
-												<div class="col-md-4">													
+												<div class="col-md-1">													
 													<video width="250" height="200" controls>
   														<source src="video/obama.mp4" type="video/mp4">
 													</video>
-													<video width="250" height="200" controls>
-														<source src="video/lip.mp4" type="video/mp4">
-													</video>
 											    </div>
-												<!-- <div class="col-md-4">			
+												<div class="col-md-1">			
 													<video width="250" height="200" controls>
 														<source src="video/lip.mp4" type="video/mp4">
 													</video>
-												</div>  -->
-												<div class="col-md-4">			
+												</div> 
+												<div class="col-md-1">			
 													<video width="250" height="200" controls>
 														<source src="video/woman.mp4" type="video/mp4">
 													</video>
