--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Zhen Lv</a></h1>
-				<span class="position"><a href="#">Machine Learning and Deep learning expert @ Alibaba</span>
+				<span class="position"><a href="#">Deep learning expert @ Alibaba</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -101,7 +101,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						   					<h1>Hi! I'm Lv Zhen</h1>
 						   					<h2>I'm currently a algorithm expert in Computer Science at Alibaba. 
 						   					</h2>
-											<h2>My research interests lie in Computer Vision and Machine Learning, focusing on 3D vision, multimodal models mainly. </h2>
+											<h2>My research interests lie in Computer Vision and Deep Learning, focusing on 3D vision, multimodal models mainly. </h2>
 												<a >
 												<p><a class="btn btn-primary btn-learn" href="docs/CV_Yi_Ting_Chen.pdf">Download CV <i class="icon-download4"></i></a></p>
 											</div>
@@ -401,17 +401,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											<div class="container">
 											  <div class="row">
 												<div class="col-md-2">													
-													<video width="250" height="200" controls>
+													<video width="220" height="200" controls>
   														<source src="video/obama.mp4" type="video/mp4">
 													</video>
 											    </div>
 												<div class="col-md-2">			
-													<video width="250" height="200" controls>
+													<video width="220" height="200" controls>
 														<source src="video/lip.mp4" type="video/mp4">
 													</video>
 												</div> 
 												<div class="col-md-2">			
-													<video width="250" height="200" controls>
+													<video width="220" height="200" controls>
 														<source src="video/woman.mp4" type="video/mp4">
 													</video>
 												</div> 
