--- a/index.html
+++ b/index.html
@@ -353,11 +353,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">Vivo Mobile Communication - CV Engineer  /   Dec 2017 - Jan 2020
 									            </a>
 									        </h4>
-									    </div>
-									    <div id="collapseTwo2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
+                                            <div id="collapseOne2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									         <div class="panel-body">
 									            <div class="row">
-										      		<div class="col-md-6">										   
+										      		<div class="col-md-12">										   
 										      			<ul>
 															<li>Responsible for projects including multi-image registration, denoising, and de- blurring, completing PC and mobiles side algorithm development work.</li>
 														</ul>
@@ -400,18 +399,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				                  	    <span>
 											<div class="container">
 											  <div class="row">
-												<div class="col-md-3">													
-													<video width="220" height="200" controls>
+												<div class="col-md-2">													
+													<video width="200" height="200" controls>
   														<source src="video/obama.mp4" type="video/mp4">
 													</video>
 											    </div>
-												<div class="col-md-3">			
-													<video width="220" height="200" controls>
+												<div class="col-md-2">			
+													<video width="200" height="200" controls>
 														<source src="video/lip.mp4" type="video/mp4">
 													</video>
 												</div> 
-												<div class="col-md-3">			
-													<video width="220" height="200" controls>
+												<div class="col-md-2">			
+													<video width="200" height="200" controls>
 														<source src="video/woman.mp4" type="video/mp4">
 													</video>
 												</div> 
