--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <!-- <h4>Object Detection in Infrared Images </h4> -->
 				                  	    <span>
 											<div class="container">
-											  <div class="row">
+											  <div class="row-md-1">
 												<div class="col-md-2">													
 													<video width="200" height="200" controls>
   														<source src="video/obama.mp4" type="video/mp4">
@@ -429,7 +429,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">
-                                                <div class="row">
+                                                <div class="row-md-1">
                                                     <!-- <div class="col-md-3">
                                                         We implemented the paper: Rectangling Panoramic Images via Warping, SIGGRAPH 2013, as our final project of course 16720B. You can find the code below.<br>
                                                         [<a href="https://github.com/Jamie725/Rectangling-Panoramic-Images-Via-Warping"  target="_blank">Code</a>]
@@ -458,7 +458,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">
-                                                <div class="row">
+                                                <div class="row-md-1">
                                                     <!-- <div class="col-md-3">
                                                         We implemented the paper: Rectangling Panoramic Images via Warping, SIGGRAPH 2013, as our final project of course 16720B. You can find the code below.<br>
                                                         [<a href="https://github.com/Jamie725/Rectangling-Panoramic-Images-Via-Warping"  target="_blank">Code</a>]
@@ -488,7 +488,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">
-                                                <div class="row">
+                                                <div class="row-md-1">
                                                     <!-- <div class="col-md-3">
                                                         We implemented the paper: Rectangling Panoramic Images via Warping, SIGGRAPH 2013, as our final project of course 16720B. You can find the code below.<br>
                                                         [<a href="https://github.com/Jamie725/Rectangling-Panoramic-Images-Via-Warping"  target="_blank">Code</a>]
@@ -496,7 +496,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                                         <br>
                                                     </div> -->
                                                     <div class="col-md-6">
-															<img width="100%" src="video/swap.png" alt="Italian Trulli">
+															<img width="100%" src="video/swap.jpg" alt="Italian Trulli">
 									  				</div>
                                                     <div class="col-md-4">													
                                                         <video width="360" height="270" controls>
@@ -518,7 +518,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <!-- <h4>Rectangling Panoramic Images via Warping</h4> -->
 				                  	    <span>
 											<div class="container">
-                                                <div class="row">
+                                                <div class="row-md-1">
                                                     <div class="col-md-4">													
                                                         <video width="360" height="270" controls>
                                                             <source src="video/0726_1.mp4" type="video/mp4">
